--- a/app/assets/javascripts/templates/components/humon-editor.hbs
+++ b/app/assets/javascripts/templates/components/humon-editor.hbs
@@ -1,1 +1,1 @@
-{{view Sysys.HumonNodeView nodeContentBinding="view.content" layoutName="humon_node_fixed_key_layout"}}
+{{view Sysys.HumonNodeView nodeContentBinding="view.content" layoutName=rootLayout_}}
