--- a/app/assets/stylesheets/humon/detail.css.scss
+++ b/app/assets/stylesheets/humon/detail.css.scss
@@ -36,7 +36,7 @@ span.node-detail.node-icon {
   top: ($nodeCopyFontSize - $nodeIconSize);
 }
 
-.node-invalid-reason {
+.copy.node-invalid-reason {
   color: $errorRed;
 }
 
