--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -40,16 +40,15 @@
 // ===
 // Active node indicator
 .node.active:before {
-  @include node_text_inline_mx();
+  @include node_text_inline_mx(1);
   transition: all 300ms ease;
   content: "\00BB"; //»
   position: absolute;
   left: 0;
-  font-size: 22px;
   font-weight: 700;
-  height: 22px;
+  // font-size: 22px;
+  // height: 22px;
   // need to shift up because font-size is nonstandard;
-  top: -6px;
 }
 
 .node.active > .node {
@@ -87,6 +86,9 @@
 .node .copy-item {
   padding-left: 4px;
   padding-right: 4px;
+}
+.node .node-indent {
+  padding-left: $nodeWhiteIndent;
 }
 
 .node {
