Simplifying css with :not(.node) selectors. Fix invalid-reason styling. Add deleteChild and deletePressed

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -125,3 +125,5 @@ $activeIndicatorHeight: $activeIndicatorFontSize;
   }
 }
 
+// ==
+// To be included under whatever element is right above the node_header
