--- a/app/assets/stylesheets/humon/detail.css.scss
+++ b/app/assets/stylesheets/humon/detail.css.scss
@@ -40,7 +40,7 @@ span.node-detail.node-icon {
   color: $errorRed;
 }
 
-.node.invalid :not(.node) .node-detail.node-icon i.icon-element {
+.node.invalid :not(.node-collection) .node-detail.node-icon i.icon-element {
   @include warning-icon;
   color: $errorRed;
   visibility: visible !important;
