Add required-caution sigil. Reduce padding on node.copy-item

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -24,6 +24,10 @@ $fieldWhiteIndent: 15px;
 $errorActiveRed: rgba(210, 40, 40, 1);
 $errorRed: rgba(180, 80, 80, 1);
 
+$cautionYellow: rgba(195, 195, 20, 1);
+$cautionActiveYellow: rgba(195, 195, 20, 1);
+
+
 @mixin imp {
   border: 1px solid red;
 }
