Update Goals styling to highlight dark on active

--- a/app/assets/stylesheets/humon/types/goals.css.scss
+++ b/app/assets/stylesheets/humon/types/goals.css.scss
@@ -5,6 +5,13 @@
 .node.goal {
   @include node_large_mx();
   &.active {
+    .content-field {
+      color: $nodeActiveCopyColor;
+    }
+
+    .copy  {
+      color: $nodeActiveDetailCopyColor;
+    }
   }
 
   // Text child
