--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -84,6 +84,14 @@ $nodeEditorPadding: 15px 3px;
 $hecTitleKeyColor: darken($nodeCopyColor, 15%);
 $hecTitleFontSize: $nodeCopyFontSize * 1.3;
 
+@mixin text-center  {
+  text-align: center;
+}
+@mixin block-center  {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @mixin warning-icon {
   &:before {
   content: "\f071" !important;
