Node styling: remove max width on title field; remove copy-item from content fields (and add inherent left-right padding to .content-field);

--- a/app/assets/stylesheets/humon/content_field.css.scss
+++ b/app/assets/stylesheets/humon/content_field.css.scss
@@ -9,6 +9,8 @@
 
 .node .content-field {
   @include node_text_inline_mx();
+  padding-left: 4px;
+  padding-right: 4px;
 
   border-bottom: $borderLightUnderline;
   border-left: $borderTransparent;
