--- a/app/assets/stylesheets/humon/key_field.css.scss
+++ b/app/assets/stylesheets/humon/key_field.css.scss
@@ -2,7 +2,7 @@
 
 .node {
 
-  span.content-field.key-field {
+  span.key-field {
     min-width: $keyFieldMinWidth;
     max-width: $keyFieldMaxWidth;
 
@@ -10,21 +10,21 @@
     overflow: hidden;
     white-space: nowrap;
   }
-  span.content-field.key-field:focus {
+  span.key-field:focus {
     max-width: 1000px;
     transition: all 300ms ease;
   }
-  span.content-field.key-field.key-field-fixed {
+  span.key-field.key-field-fixed {
     border-bottom: $borderTransparent;
   }
 
 }
 
-.node.active > span.content-field.key-field.key-field-fixed {
+.node.active > span.key-field.key-field-fixed {
   border-bottom: $borderTransparent;
 }
 
-.node.active > .content-field.idx-field {
+.node.active > .idx-field {
   transition-property: color;
   color: $nodeIdxActiveCopyColor;
   border-bottom: $borderTransparent;
