Update DashboardController#productivityPulse to return .daily and .last3hours; update dashboard.emblem to display them. Switch title from Mongo to Sherwin points

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mongo</title>
+  <title>Sherwin points</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_tag do %>
     window._sp_vars = <%=raw  @server_side_vars.to_json if @server_side_vars %>;
