--- a/app/assets/stylesheets/humon/debug.css.scss
+++ b/app/assets/stylesheets/humon/debug.css.scss
@@ -20,6 +20,10 @@ $nodeDebugInlineCopyColor: $nodeDetailCopyColor;
   right: 5px;
   bottom: 5px;
   font-size: 14px;
+  dd {
+    display: inline-block;
+    height: 14px;
+  }
 }
 
 .debug-inline {
@@ -63,3 +67,4 @@ $nodeDebugInlineCopyColor: $nodeDetailCopyColor;
   content: "@! ";
   color: $errorRed;
 }
+
