Sessions#create persists sessions now even in API mode: solution was to make SessionController inherit from ApplicationController instead of Devise::SessionsController

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   <!-- mixpanel will be inserted here by the gem -->
 </head>
 
-<body class="ass"> </body>
+<body class="ass">
+  <%= yield %>
+</body>
 
 </html>
