Polish up Notifications and Login styling

--- a/app/assets/stylesheets/notifications.css.scss
+++ b/app/assets/stylesheets/notifications.css.scss
@@ -1,9 +1,8 @@
 //$spDayWidth: 700px;
 
 .notifications {
-  width: 700px;
 }
 .notification {
-  width: 90%;
-  padding: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
