--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -93,6 +93,11 @@ $hecTitleFontSize: $nodeCopyFontSize * 1.3;
   margin-left: auto;
   margin-right: auto;
 }
+@mixin col-center  {
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 @mixin warning-icon {
   &:before {
