Update acts styling (button): add act.css.scss

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -13,6 +13,7 @@
 @import "notifications";
 @import "dashboard";
 
+@import "act";
 @import "data_point";
 @import "rescue_time_dp";
 @import "day";
