Rename node.notInitialized to node.initialized; corresponding logic changes; update debug panel

--- a/app/assets/stylesheets/humon/debug.css.scss
+++ b/app/assets/stylesheets/humon/debug.css.scss
@@ -14,6 +14,7 @@ $nodeDebugInlineCopyColor: $nodeDetailCopyColor;
 }
 
 .node-debug-panel {
+  z-index: 1000;
   position: relative;
   display: inline-block;
   position: fixed;
@@ -57,7 +58,7 @@ $nodeDebugInlineCopyColor: $nodeDetailCopyColor;
   content: "$Δ ";
 }
 
-.debug-glyphs i.not-initialized:after {
+.debug-glyphs i.uninitialized:after {
   content: "@i ";
 }
 .debug-glyphs i.type-locked:after {
