Add orange styling for dirty acts and days

--- a/app/assets/stylesheets/day.css.scss
+++ b/app/assets/stylesheets/day.css.scss
@@ -32,7 +32,11 @@
 .day.clean .save-button {
   display: none;
 }
-.day.dirty .save-button {
+.dirty {
+  border-top: orange 2px solid;
+}
+.clean {
+  border-top: transparent 2px solid;
 }
 
 
