Add asset_host to Figaro.env.ASSET_HOST

--- a/app/views/layouts/with_js.html.erb
+++ b/app/views/layouts/with_js.html.erb
@@ -12,6 +12,8 @@
   <!-- mixpanel will be inserted here by the gem -->
 </head>
 
-<body <%=raw "id='ember-app'" if @ember%> ></body>
+<body <%=raw "id='ember-app'" if @ember%> >
+Env:  <%= Rails.env %> <%= yield %>
+</body>
 
 </html>
