Create version of humon-field that just wraps a singular NodeView (though can still break out into nonliterality) #WIP

--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -94,6 +94,12 @@
 .node {
 }
 
+// ==
+// Humon field
+.humon-field {
+  border: 1px solid red;
+}
+
 @import "humon/debug";
 @import "humon/detail";
 @import "humon/content_field";
