changing node tagnames to be more semantic

--- a/app/assets/stylesheets/humon/debug.css.scss
+++ b/app/assets/stylesheets/humon/debug.css.scss
@@ -1,5 +1,5 @@
 $nodeDebugInlineCopyColor: $nodeDetailCopyColor;
-.node.active > span.debug-auto-hide {
+.node.active > .debug-auto-hide {
   visibility: visible;
 }
 .debug-auto-hide {
