--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -2,6 +2,7 @@
 @import "humon/bootstrap_node_defaults";
 
 .node {
+  display: block;
   font-family: "Source Sans Pro";
   font-weight: 500;
   // font-size: $nodeCopyFontSize;
