--- a/app/assets/stylesheets/humon/key_field.css.scss
+++ b/app/assets/stylesheets/humon/key_field.css.scss
@@ -2,7 +2,7 @@
 
 .node {
 
-  span.key-field {
+  .key-field {
     min-width: $keyFieldMinWidth;
     max-width: $keyFieldMaxWidth;
 
@@ -10,7 +10,7 @@
     overflow: hidden;
     white-space: nowrap;
   }
-  span.key-field:focus {
+  .key-field:focus {
     max-width: 1000px;
     transition: all 300ms ease;
   }
@@ -20,7 +20,7 @@
 
 }
 
-.node.active > span.key-field.key-field-fixed {
+.node.active > .key-field.key-field-fixed {
   border-bottom: $borderTransparent;
 }
 
