--- a/app/assets/stylesheets/humon/title_field.css.scss
+++ b/app/assets/stylesheets/humon/title_field.css.scss
@@ -1,5 +1,5 @@
 @import "base";
-.node span.content-field.title-field {
+.node .content-field.title-field {
   color: $hecTitleKeyColor;
   border-bottom: $borderTransparent;
   font-weight: 600;
@@ -7,6 +7,6 @@
   max-width: none;
 
 }
-.node.active > span.content-field.title-field {
+.node.active > .content-field.title-field {
   color: $hecTitleKeyColor;
 }
