--- a/app/assets/stylesheets/humon/key_field.css.scss
+++ b/app/assets/stylesheets/humon/key_field.css.scss
@@ -14,7 +14,7 @@
     max-width: 1000px;
     transition: all 300ms ease;
   }
-  span.key-field.key-field-fixed {
+  .key-field.key-field-fixed {
     border-bottom: $borderTransparent;
   }
 
