--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -36,25 +36,27 @@
 // ===
 // Active node styling
 .node.active {
+  border-left: $nodeActiveBorderLeft;
+  transition: all 300ms ease;
 }
 
 // ===
 // Active node indicator
 .node.active:before {
-  @include node_text_inline_mx(1);
-  transition: all 300ms ease;
-  content: "\00BB"; //»
-  position: absolute;
-  left: 0;
-  font-weight: 700;
+  // @include node_text_inline_mx(1);
+  // transition: all 300ms ease;
+  // content: "\00BB"; //»
+  // position: absolute;
+  // left: 0;
+  // font-weight: 700;
   // font-size: 22px;
   // height: 22px;
   // need to shift up because font-size is nonstandard;
 }
 
 .node.active > .node {
-  border-left: $nodeActiveBorderLeft;
-  transition: all 300ms ease;
+  // border-left: $nodeActiveBorderLeft;
+  // transition: all 300ms ease;
 }
 /*
  * Active child styling
