--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -9,13 +9,22 @@
   cursor: text;
   color: $copygray;
   position: relative;
-  padding-left: $nodeWhiteIndent;
+  padding-left: $node_white_indent_width;
   border: 1px transparent solid;
   border-left: $nodeBorderLeft;
   transition: all 300ms ease;
 }
+
+// HUMON-INLINE
 .node.inline {
   display: inline-block;
+  padding-left: 0;
+  border-left: 0;
+  border-bottom: none;
+  &.active {
+    padding-left: 0;
+    border-left: 0;
+  }
 }
 
 // ==
