Clean up: goal.css

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -116,6 +116,12 @@ $hecTitleFontSize: $nodeCopyFontSize * 1.3;
   height: $lineheight * $factor;
   line-height: $lineheight * $factor;
   vertical-align: top;
+  .content-field, .copy  {
+    @include node_font_mx($factor);
+    height: $lineheight * $factor;
+    line-height: $lineheight * $factor;
+    vertical-align: top;
+  }
 }
 
 @mixin node_text_inline_mx($factor: 1) {
