--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -10,7 +10,6 @@
   color: $copygray;
   position: relative;
   padding-left: $node_white_indent_width;
-  border: 1px transparent solid;
   border-left: $nodeBorderLeft;
   transition: all 300ms ease;
 }
@@ -20,7 +19,7 @@
 .node.inline {
   display: inline-block;
   padding-left: 0;
-  border-left: 0;
+  border: 0;
   border-bottom: none;
   &.active {
     padding-left: 0;
