Style: make Goals and Sleep/Summary (.header vs title-field) colors similar (copycolor and nodeCopyActiveColor)

--- a/app/assets/stylesheets/humon/types/goals.css.scss
+++ b/app/assets/stylesheets/humon/types/goals.css.scss
@@ -8,6 +8,7 @@
   &:focus {
     border-left: $nodeActiveBorderLeft;
     transition: all 300ms ease;
+    color: $nodeActiveCopyColor;
   }
   transition: all 300ms ease;
 }
