--- a/app/assets/stylesheets/humon/title_field.css.scss
+++ b/app/assets/stylesheets/humon/title_field.css.scss
@@ -5,6 +5,7 @@
   font-weight: 600;
   font-size: $hecTitleFontSize;
   max-width: none;
+  padding: 0px;
 }
 
 .node.active > .content-field.title-field {
