--- a/app/assets/stylesheets/humon/types/goals.css.scss
+++ b/app/assets/stylesheets/humon/types/goals.css.scss
@@ -2,7 +2,7 @@
 
 .goals .header {
   border-left: $nodeBorderLeft;
-  padding-left: 5px;
+  padding-left: $node_white_indent_width;
   box-shadow: none !important;
   outline: none !important;
   &:focus {
@@ -11,6 +11,10 @@
     color: $nodeActiveCopyColor;
   }
   transition: all 300ms ease;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .goals .header .goal-button {
@@ -41,8 +45,8 @@
       max-width: 750px;
     }
   }
-  padding-left: 0px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-left: $f_total_node_text_offset_width - 4px;
+  padding-top: 6px;
+  padding-bottom: 6px;
   border-bottom: $borderLightest1Underline;
 }
