Adding inlineNode and inlineField

--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -16,7 +16,7 @@
 
 // HUMON-INLINE (when `inline` is set to true)
 //    - used by DisplayField
-.node.inline {
+.node.inline-node {
   display: inline-block;
   padding-left: 0;
   border: 0;
