--- a/app/assets/stylesheets/humon/content_field.css.scss
+++ b/app/assets/stylesheets/humon/content_field.css.scss
@@ -7,12 +7,18 @@
 
 .content-field {
   @include node_text_inline_mx();
-  padding-left: $content_field_padding_width;
-  padding-right: $content_field_padding_width;
   border-bottom: $borderLightUnderline;
   border-left: $borderTransparent;
   color: $nodeCopyColor;
   transition: all 300ms ease;
+}
+.content-field.standalone {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.content-field.embedded-in-text {
+  padding-left: $content_field_padding_width;
+  padding-right: $content_field_padding_width;
 }
 
 .active > .content-field {
