--- a/app/assets/stylesheets/humon/humon.css.scss
+++ b/app/assets/stylesheets/humon/humon.css.scss
@@ -72,7 +72,7 @@
 // ==
 // Generic helper class, should
 .node .copy {
-  @include node_text_inline_mx();
+  @include node_text();
   color: $nodeDetailCopyColor;
 }
 
