Add note.css styling for notes

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -15,6 +15,7 @@
 @import "act";
 @import "data_point";
 @import "rescue_time_dp";
+@import "note";
 @import "day";
 <% unless Rails.env.development? %>
   @import "prod_only";
