--- a/app/views/layouts/with_js.html.erb
+++ b/app/views/layouts/with_js.html.erb
@@ -6,8 +6,8 @@
   <%= javascript_tag do %>
     window._sp_vars = <%=raw  @server_side_vars.to_json if @server_side_vars %>;
   <% end %>
-  <% javascript_include_tag "ember_deps" %>
-  <% javascript_include_tag "sysys" %>
+  <%= javascript_include_tag "ember_deps" %>
+  <%= javascript_include_tag "sysys" %>
   <%= csrf_meta_tags %>
 
   <!-- mixpanel will be inserted here by the gem -->
