--- a/app/views/layouts/with_react_js.html.erb
+++ b/app/views/layouts/with_react_js.html.erb
@@ -13,6 +13,6 @@
   <!-- mixpanel will be inserted here by the gem -->
 </head>
 
-<body <%=raw "id='ember-app'" if @ember%> ></body>
+<body> hi mom</body>
 
 </html>
