Basic routing example works

--- a/app/views/layouts/with_react_js.html.erb
+++ b/app/views/layouts/with_react_js.html.erb
@@ -13,6 +13,11 @@
   <!-- mixpanel will be inserted here by the gem -->
 </head>
 
-<body> hi mom</body>
+<body>
+  <div id='1'>
+    hi mom!!
+  </div>
+  <div id='2'>
+</body>
 
 </html>
