--- a/app/views/layouts/with_react_js.html.erb
+++ b/app/views/layouts/with_react_js.html.erb
@@ -14,10 +14,13 @@
 </head>
 
 <body>
-  <div id='1'>
-    hi mom!!
+  <div class=container>
+    <div class='row'>
+      <div class='col-sm-12 center-block'>
+        <div class='react-mount'/>
+      </div>
+    </div>
   </div>
-  <div id='2'>
 </body>
 
 </html>
