--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -20,6 +20,20 @@ $glyphsize: 14px;
 $lineheight: 20px;
 
 
+$font-family-sans-serif: 'proxima-nova', Helvetica, Arial, sans-serif;
+$font-family-monospaced: "Inconsolata", "Courier New";
+$font-family-headings: 'proxima-nova', Helvetica, Arial, sans-serif;
+$font-family-nimbus: "nimbus-sans-condensed", Helvetica, Arial, sans-serif;
+$font-size-tiny: 12px;
+$font-size-small: 13px;
+$font-size-base: 14px;
+$font-size-large: 16px;
+$font-size-monospaced-large: 16px;
+$font-size-monospaced-base: 15px;
+$font-size-monospaced-small: 12px;
+
+// $brand-danger: rgba(180, 80, 80, 1);
+
 $errorActiveRed: rgba(210, 40, 40, 1);
 $errorRed: rgba(180, 80, 80, 1);
 
